# rusty_tensor

./: Cargo.toml  README.md
.github/workflows/: bindings.yml  coverage.yml  rust.yml
py-tensor/: Cargo.toml  pyproject.toml
py-tensor/benchmark/: README.md  run.py
py-tensor/src/: cp.rs  lib.rs  tensors.rs  utils.rs
py-tensor/src/cp/: cp_als.rs
py-tensor/src/tensors/: dense.rs  kruskal.rs
py-tensor/src/utils/: khatrirao.rs
py-tensor/tests/: test_cp_als.py  test_dense.py  test_kruskal.py
src/: cp.rs  lib.rs  tensors.rs  utils.rs
src/cp/: cp_als.rs  cp_als_args.rs
src/tensors/: dense.rs  dense_tensor.rs  kruskal.rs  sparse.rs
src/utils/: khatrirao.rs  ndarray_helpers.rs
