[package]
name = "rusty_tensor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
ndarray-linalg = "0.16.0"
ndarray-rand = "0.14.0"
either = "1.8.1"

[features]
openblas = ["ndarray-linalg/openblas"]
openblas-system = ["ndarray-linalg/openblas-system"]
netlib = ["ndarray-linalg/netlib"]
intel-mkl = ["ndarray-linalg/intel-mkl"]
